--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "MPU9250 Module for Webduino:bit",
   "repository": "https://github.com/webduinoio/webduino-bit-module-mpu9250.git",
   "homepage": "https://webduino.io",
-  "main": "BitMPU9250.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
